Change default web UI port from 8080 to 8090
Avoids conflict with dump1090/readsb ADS-B web interface that runs on port 8080 on WarDragon kits. This allows Analytics to be deployed on the same machine as DragonSync without port conflicts.

--- a/.env.example
+++ b/.env.example
@@ -35,8 +35,9 @@ GRAFANA_LOG_LEVEL=info
 # =============================================================================
 # Web API Configuration
 # =============================================================================
-# Web UI port (default: 8080)
-WEB_PORT=8080
+# Web UI port (default: 8090)
+# NOTE: 8080 is used by dump1090/readsb on WarDragon kits for ADS-B
+WEB_PORT=8090
 
 # CORS origins (comma-separated, use * for all origins in dev only)
 # SECURITY: In production, specify exact origins: http://example.com,https://example.com
@@ -81,7 +82,7 @@ VOLUMES_PATH=./volumes
 #    - Use reverse proxy (nginx/traefik) for web/grafana with SSL
 #
 # 4. Enable UFW/firewall:
-#    sudo ufw allow 8080/tcp  # Web UI (or via reverse proxy)
+#    sudo ufw allow 8090/tcp  # Web UI (or via reverse proxy)
 #    sudo ufw allow 3000/tcp  # Grafana (or via reverse proxy)
 #
 # 5. Regular backups:
