--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -111,17 +111,27 @@ cachetools==5.3.2
 # Caching utilities
 # Used for memoization of expensive queries
 
-# Development dependencies (optional)
+# Development and Testing dependencies
+# Install with: pip install -r requirements.txt
+# For testing only: pip install pytest pytest-asyncio pytest-cov pytest-mock aioresponses
+
+pytest==8.0.0
+# Testing framework - industry standard for Python testing
+
+pytest-asyncio==0.23.3
+# Async test support for pytest - enables async test functions
+
+pytest-cov==4.1.0
+# Test coverage reporting - tracks code coverage during tests
+
+pytest-mock==3.12.0
+# Enhanced mocking for pytest - simplifies mock creation
+
+aioresponses==0.7.6
+# Mock aiohttp requests for testing - mocks HTTP client calls
+
+# Optional development dependencies
 # Uncomment for development environment
-#
-# pytest==8.0.0
-# # Testing framework
-#
-# pytest-asyncio==0.23.3
-# # Async test support for pytest
-#
-# pytest-cov==4.1.0
-# # Test coverage reporting
 #
 # black==24.1.1
 # # Code formatter
