--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,11 @@ config/*_private.yaml
 
 # Docker override files (for local development)
 docker-compose.override.yml
+
+# Verification and test scripts
+verify_*.py
+verify_*.sh
+
+# Development artifacts (keep README for reference)
+docs/archive/*
+!docs/archive/README.md
