--- a/config/kits.yaml
+++ b/config/kits.yaml
@@ -1,43 +1,42 @@
 # WarDragon Kit Configuration
 # Define the WarDragon kits that this Analytics instance will collect data from
+#
+# IMPORTANT: Since the collector runs in Docker, 127.0.0.1 will NOT work!
+# Use one of these options instead:
+#   - Your kit's actual LAN IP: http://192.168.1.100:8088
+#   - Docker host gateway (Linux): http://172.17.0.1:8088
+#   - Docker Desktop (Mac/Win): http://host.docker.internal:8088
+#
+# You can also add kits via the Web UI at http://localhost:8090 (Kit Manager)
 
-kits:
-  # Example: Single local kit (for testing or single-kit deployments)
-  - id: local-kit
-    name: "Local WarDragon Kit"
-    api_url: "http://127.0.0.1:8088"
-    location: "Local"
-    enabled: true
-
-  # Example: Remote kit on local network
-  # - id: kit-001
+kits: []
+  # Uncomment and edit one of these examples:
+  #
+  # Example: Kit on the local network
+  # - api_url: "http://192.168.1.100:8088"
   #   name: "Mobile Unit Alpha"
-  #   api_url: "http://192.168.1.100:8088"
   #   location: "Field Operations"
   #   enabled: true
-
-  # Example: Another remote kit
-  # - id: kit-002
-  #   name: "Mobile Unit Bravo"
-  #   api_url: "http://192.168.1.101:8088"
-  #   location: "Field Operations"
+  #
+  # Example: Kit on same machine as Analytics (Linux Docker)
+  # - api_url: "http://172.17.0.1:8088"
+  #   name: "Local Kit"
+  #   location: "Local"
   #   enabled: true
-
-  # Example: Fixed site kit
-  # - id: kit-003
-  #   name: "Fixed Site Charlie"
-  #   api_url: "http://10.0.0.50:8088"
-  #   location: "Headquarters"
-  #   enabled: false  # Disabled - will not be polled
+  #
+  # Example: Kit on same machine (Docker Desktop on Mac/Windows)
+  # - api_url: "http://host.docker.internal:8088"
+  #   name: "Local Kit"
+  #   location: "Local"
+  #   enabled: true
 
 # Configuration notes:
-# - id: Unique identifier for the kit (alphanumeric, hyphens, underscores)
-# - name: Human-readable name for display
-# - api_url: Full URL to DragonSync API endpoint (default port 8088)
+# - api_url: Full URL to DragonSync API endpoint (required, default port 8088)
+# - name: Human-readable name for display (optional, defaults to kit_id from API)
 # - location: Optional location description
 # - enabled: Set to false to temporarily disable polling without removing config
 #
-# Security notes:
-# - Ensure kits are on a trusted network or use VPN
-# - Future versions will support API key authentication
-# - Rate limiting: DragonSync allows 100 requests per 60 seconds per IP
+# Kit ID Discovery:
+# - The collector automatically fetches each kit's /status endpoint on startup
+# - The kit_id (e.g., "wardragon-abc123") is extracted from the API response
+# - This ensures the database uses the actual WarDragon serial number
