--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,6 @@ on:
       - 'tests/**'
       - 'requirements.txt'
       - 'pytest.ini'
-      - '.coveragerc'
       - '.github/workflows/tests.yml'
   pull_request:
     branches: [ main, develop ]
@@ -17,27 +16,22 @@ on:
       - 'tests/**'
       - 'requirements.txt'
       - 'pytest.ini'
-      - '.coveragerc'
       - '.github/workflows/tests.yml'
   workflow_dispatch:
 
 jobs:
   unit-tests:
-    name: Unit Tests (Python ${{ matrix.python-version }})
+    name: Unit Tests
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ['3.9', '3.10', '3.11']
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.11'
           cache: 'pip'
 
       - name: Install dependencies
@@ -49,130 +43,6 @@ jobs:
       - name: Run unit tests
         run: |
           pytest -m unit -v --tb=short
-
-      - name: Generate coverage report
-        if: matrix.python-version == '3.11'
-        run: |
-          pytest -m unit --cov=app --cov-report=xml --cov-report=term
-
-      - name: Check coverage threshold
-        if: matrix.python-version == '3.11'
-        run: |
-          pytest -m unit --cov=app --cov-report=term --cov-fail-under=70
-
-      - name: Upload coverage to artifacts
-        if: matrix.python-version == '3.11'
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: |
-            coverage.xml
-            htmlcov/
-          retention-days: 30
-
-  integration-tests:
-    name: Integration Tests (Python ${{ matrix.python-version }})
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ['3.9', '3.10', '3.11']
-
-    services:
-      timescaledb:
-        image: timescale/timescaledb:latest-pg15
-        env:
-          POSTGRES_DB: wardragon_test
-          POSTGRES_USER: wardragon
-          POSTGRES_PASSWORD: testpassword123
-          TIMESCALEDB_TELEMETRY: off
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'pip'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r app/requirements.txt
-          pip install pytest pytest-asyncio pytest-cov pytest-mock pytest-timeout
-
-      - name: Wait for TimescaleDB
-        run: |
-          timeout 60 bash -c 'until pg_isready -h localhost -p 5432 -U wardragon; do sleep 2; done'
-        env:
-          PGPASSWORD: testpassword123
-
-      - name: Initialize test database
-        run: |
-          PGPASSWORD=testpassword123 psql -h localhost -U wardragon -d wardragon_test -f timescaledb/init.sql || true
-        env:
-          PGPASSWORD: testpassword123
-
-      - name: Run integration tests with Docker Compose
-        run: |
-          # Start services
-          docker-compose -f docker-compose.yml up -d --build
-
-          # Wait for services to be healthy
-          timeout 120 bash -c 'until docker exec wardragon-timescaledb pg_isready -U wardragon; do sleep 2; done'
-          timeout 120 bash -c 'until curl -sf http://localhost:8090/health; do sleep 2; done'
-
-          # Run integration tests
-          export RUN_INTEGRATION_TESTS=1
-          export TEST_DATABASE_URL="postgresql://wardragon:testpassword123@localhost:5432/wardragon_test"
-          pytest -m integration -v --tb=short
-
-          # Cleanup
-          docker-compose down -v
-
-      - name: Integration test coverage
-        if: matrix.python-version == '3.11'
-        run: |
-          docker-compose -f docker-compose.yml up -d --build
-          timeout 120 bash -c 'until docker exec wardragon-timescaledb pg_isready -U wardragon; do sleep 2; done'
-
-          export RUN_INTEGRATION_TESTS=1
-          export TEST_DATABASE_URL="postgresql://wardragon:testpassword123@localhost:5432/wardragon_test"
-          pytest -m integration --cov=app --cov-report=xml --cov-report=term
-
-          docker-compose down -v
-
-      - name: Upload integration coverage
-        if: matrix.python-version == '3.11'
-        uses: actions/upload-artifact@v4
-        with:
-          name: integration-coverage-report
-          path: coverage.xml
-          retention-days: 30
-
-  test-summary:
-    name: Test Summary
-    runs-on: ubuntu-latest
-    needs: [unit-tests, integration-tests]
-    if: always()
-
-    steps:
-      - name: Check test results
-        run: |
-          if [ "${{ needs.unit-tests.result }}" != "success" ] || [ "${{ needs.integration-tests.result }}" != "success" ]; then
-            echo "Tests failed!"
-            exit 1
-          fi
-          echo "All tests passed!"
 
   lint:
     name: Code Quality
@@ -191,7 +61,7 @@ jobs:
       - name: Install linting tools
         run: |
           python -m pip install --upgrade pip
-          pip install ruff black isort mypy
+          pip install ruff black isort
 
       - name: Run ruff
         run: |
@@ -204,7 +74,3 @@ jobs:
       - name: Check import sorting
         run: |
           isort --check-only app/ tests/ || true
-
-      - name: Type checking with mypy
-        run: |
-          mypy app/ --ignore-missing-imports || true
