Simplify CI workflow to linting only

--- a/pytest.ini
+++ b/pytest.ini
@@ -33,7 +33,7 @@ markers =
     skip_ci: Tests to skip in CI/CD (for local development only)
 
 # Async test support
-asyncio_mode = auto
+asyncio_mode = strict
 
 # Timeout for tests (prevent hanging)
 # Requires pytest-timeout: pip install pytest-timeout
