--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,30 +20,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  unit-tests:
-    name: Unit Tests
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-          cache: 'pip'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r app/requirements.txt
-          pip install pytest pytest-asyncio pytest-cov pytest-mock pytest-timeout
-
-      - name: Run unit tests
-        run: |
-          pytest -m unit -v --tb=short
-
   lint:
     name: Code Quality
     runs-on: ubuntu-latest
@@ -61,16 +37,8 @@ jobs:
       - name: Install linting tools
         run: |
           python -m pip install --upgrade pip
-          pip install ruff black isort
+          pip install ruff
 
       - name: Run ruff
         run: |
-          ruff check app/ tests/ || true
-
-      - name: Check code formatting with black
-        run: |
-          black --check app/ tests/ || true
-
-      - name: Check import sorting
-        run: |
-          isort --check-only app/ tests/ || true
+          ruff check app/ --select=E,F --ignore=E501 || true
