Remove unit marker filter - no tests use it

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Run unit tests
         run: |
-          pytest -m unit -v --tb=short --ignore=tests/integration
+          pytest -v --tb=short --ignore=tests/integration
 
   lint:
     name: Code Quality
