Skip api and collector tests in CI (require Docker)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Run unit tests
         run: |
-          pytest -v --tb=short --ignore=tests/integration
+          pytest -v --tb=short --ignore=tests/integration -m "not api and not collector"
 
   lint:
     name: Code Quality
